[package]
name = "rxing-wasm"
version = "0.3.6"
edition = "2021"
description = "wasm bindings for rxing to provide commong barcode operations (decode/encode)"
repository = "https://github.com/rxing-core/rxing-wasm"
keywords = ["barcode", "2d_barcode", "1d_barcode", "barcode_reader", "barcode_writer", "rxing"]
license = "Apache 2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "decode_hints"]
decode_hints = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.76"
web-sys = {version =  "0.3.76", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

rxing = {version = "~0.6.6", default-features = false, features = ["wasm_support"]}
#rxing = {path="../rxing", version = "~0.2.23", default-features = false, features = ["wasm_support"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "fat"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
